--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -1,17 +1,21 @@
 @media only screen and (max-width: 768px) {
   #rotateBtn {
+    display: none;
+    position: absolute;
+    top: 103px;
+    right: 24px;
     text-align: right;
-    background: none;
     color: inherit;
     border: none;
     padding: 0;
     outline: inherit;
-    width: 100%;
     font-size: 30px;
-    padding-right: 20px;
-    padding-top: 20px; }
+    background: url("../assets/icons/rotate.png") no-repeat no-repeat center;
+    width: 33px;
+    height: 34px; }
   .insights-content {
-    width: 100%; }
+    width: 100%;
+    display: none; }
     .insights-content .item-wrapper {
       list-style-type: none;
       padding: 10px; }
@@ -25,22 +29,42 @@
       width: 640px;
       height: 400px; }
     .item .journal-wrapper {
-      position: absolute; }
-      .item .journal-wrapper .journal {
-        max-width: 90%;
-        margin-left: 5%;
-        max-height: 330px;
-        object-fit: cover;
-        padding-bottom: 100px; }
-    .item .photograph-wrapper {
-      max-width: 100vw;
       position: absolute;
-      margin-top: 210px; }
+      margin: auto;
+      display: flex;
+      width: 100%; }
+      .item .journal-wrapper .journal {
+        width: 90%;
+        margin: 0 auto;
+        max-width: 380px;
+        max-height: 600px;
+        object-fit: cover;
+        margin-bottom: 100px; }
+    .item .photograph-wrapper {
+      position: absolute;
+      margin-top: 210px;
+      display: flex;
+      width: 100%; }
       .item .photograph-wrapper .photograph {
+        position: relative;
+        margin: 0 auto;
         background-size: 100% auto;
         background-repeat: no-repeat;
-        max-width: 100%;
-        bottom: 0; }
+        width: 100%; }
+    .item .tag {
+      cursor: pointer;
+      z-index: 2;
+      top: 160px;
+      right: 13px;
+      display: flex;
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      background-size: 100% auto;
+      background-repeat: no-repeat;
+      object-fit: cover;
+      -webkit-transition: -webkit-transform .8s ease-in-out;
+      transition: transform .3s ease-in-out; }
   .holder div {
     z-index: 0;
     /*init z-index*/ }
@@ -105,27 +129,11 @@
         background-size: 100% auto;
         background-repeat: no-repeat;
         object-fit: cover; }
-<<<<<<< HEAD
-      .item .info .tag {
-        display: flex;
-        position: absolute;
-        float: right;
-        width: 100px;
-        height: 100px;
-        background-size: 100% auto;
-        background-repeat: no-repeat;
-        object-fit: cover;
-        transition: transform 0.5s; }
-      .item .info .tag:hover {
-        transform: rotate(20deg); }
-    .item .photograph {
-=======
     .item .tag {
       cursor: pointer;
       z-index: 2;
       top: 130px;
       right: 50px;
->>>>>>> ef0ee16c5d4ea61a4472fee024d52a350888258f
       display: flex;
       position: absolute;
       width: 100px;
