--- a/scss/insights.scss
+++ b/scss/insights.scss
@@ -31,7 +31,7 @@ body {
 
 	.insights-titles {
 		@media only screen and (max-width: $width) {
-			margin: 100px 5px 0px 5px;
+			margin: 60px 5px 0px 5px;
 		}
 
 		@media only screen and (min-width: $width) {
@@ -68,6 +68,27 @@ body {
 				margin-bottom: 12px;
 				margin-left: -30px;
 				font-size: 20px;
+
+				@media only screen and (max-width: 768px) {
+					font-size: 16px;
+				}
+
+				.active-guideline-link {
+					@media only screen and (max-width: 768px) {
+						margin-left: 12px;
+					}
+
+					.arrow {
+						width: 15px;
+						height: 11px;
+						margin-right: 4px;
+					}
+
+					@media only screen and (max-width: 768px) {
+						padding-left: 30px;
+						border: 0px solid white;
+					}
+				}
 
 				.active-guideline-link.active {
 					text-decoration: underline;
@@ -131,7 +152,8 @@ body {
 }
 
 .arrow {
-	background: url("../assets/icons/arrow.png") no-repeat no-repeat center;
-	width: 30px;
-	height: 14px;
+	background: url("../assets/icons/arrow.svg") no-repeat no-repeat center;
+	width: 22px;
+	height: 11px;
+	background-size: cover;
 }
