Subtags added - not dynamic

--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -131,9 +131,6 @@ $width: 768px;
 			padding-bottom: calc(.75 * var(--gutter));
 			margin-bottom: calc(-.25 * var(--gutter));
 
-
-
-
 		}
 	}
 
@@ -173,12 +170,32 @@ $width: 768px;
 			cursor: pointer;
 			z-index: 2;
 			top: 130px;
-			right: 50px;
+			right: 100px;
 			float: right;
 			display: flex;
 			position: absolute;
 			width: 100px;
 			height: 100px;
+			background-size: 100% auto;
+			background-repeat: no-repeat;
+			object-fit: cover;
+			-webkit-transition: -webkit-transform .8s ease-in-out;
+			transition: transform .3s ease-in-out;
+
+			&:hover {
+				transform: rotate(10deg);
+			}
+		}
+		.subtag {
+			cursor: pointer;
+			z-index: 5;
+			top: 180px;
+			right: 100px;
+			float: right;
+			display: flex;
+			position: absolute;
+			width: 60px;
+			height: 60px;
 			background-size: 100% auto;
 			background-repeat: no-repeat;
 			object-fit: cover;
@@ -231,7 +248,18 @@ $width: 768px;
 		background-repeat: no-repeat;
 		object-fit: cover;
 	}
+	.sub-sticky-note{
+		position: absolute;
+		top: 130px;
+		right: 50px;
+		height: 60px;
+		width: 60px;
+		background-size: 100% auto;
+		background-repeat: no-repeat;
+		object-fit: cover;
+	}
 }
+
 
 .sticky-note.ux-designer {
 	background-image: url('../assets/UX.png');
@@ -248,6 +276,22 @@ $width: 768px;
 .sticky-note.creative {
 	background-image: url('../assets/creat.png');
 }
+
+
+
+// **subtags**
+.sub-sticky-note.inhouse{
+	background-image: url('../assets/inhouse.png');
+	z-index: 500;
+}
+.sub-sticky-note.agency{
+	background-image: url('../assets/agency.png');
+}
+.sub-sticky-note.freelance{
+	background-image: url('../assets/freelance.png');
+}
+
+
 
 li.ux-designer {
 	.tag {
@@ -272,6 +316,25 @@ li.creative {
 		background-image: url('../assets/creat.png');
 	}
 }
+
+
+//**subtags**
+li.inhouse {
+	.subtag {
+		background-image: url('../assets/inhouse.png');
+	}
+}
+li.agency {
+	.subtag {
+		background-image: url('../assets/agency.png');
+	}
+}
+li.freelance {
+	.subtag {
+		background-image: url('../assets/freelance.png');
+	}
+}
+
 
 .item-wrapper.service-designer {
 
