--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -20,7 +20,7 @@
       list-style-type: none;
       padding: 10px; }
   .item {
-    height: 200px;
+    height: 250px;
     margin-bottom: 10px;
     position: relative;
     margin-bottom: 300px; }
@@ -143,23 +143,6 @@
       transition: transform .3s ease-in-out; }
       .item .tag:hover {
         transform: rotate(10deg); }
-    .item .subtag {
-      cursor: pointer;
-      z-index: 5;
-      top: 180px;
-      right: 100px;
-      float: right;
-      display: flex;
-      position: absolute;
-      width: 60px;
-      height: 60px;
-      background-size: 100% auto;
-      background-repeat: no-repeat;
-      object-fit: cover;
-      -webkit-transition: -webkit-transform .8s ease-in-out;
-      transition: transform .3s ease-in-out; }
-      .item .subtag:hover {
-        transform: rotate(10deg); }
     .item .photograph-wrapper {
       width: content; }
       .item .photograph-wrapper .photograph {
@@ -196,6 +179,24 @@
     background-size: 100% auto;
     background-repeat: no-repeat;
     object-fit: cover; } }
+
+.subtag {
+  cursor: pointer;
+  z-index: 5;
+  top: 180px;
+  right: 100px;
+  float: right;
+  display: flex;
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  object-fit: cover;
+  -webkit-transition: -webkit-transform .8s ease-in-out;
+  transition: transform .3s ease-in-out; }
+  .subtag:hover {
+    transform: rotate(10deg); }
 
 .sticky-note.ux-designer {
   background-image: url("../assets/UX.png"); }
