--- a/css/insights.css
+++ b/css/insights.css
@@ -3,7 +3,9 @@ body {
   color: white;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   display: grid;
-  place-items: center; }
+  place-items: center;
+  max-width: 100%;
+  overflow-x: hidden; }
   body .container {
     width: 100%;
     padding: 0px; }
