--- a/scss/insights.scss
+++ b/scss/insights.scss
@@ -7,6 +7,8 @@ body {
 	//for gridding insights-content
 	display: grid;
 	place-items: center;
+    max-width: 100%;
+    overflow-x: hidden;
 
 	.container {
 		width: 100%;
