change grid to tabl
have changed grid to table because it allows us to have tables within a table which is needed i think? so that its easier to add those sticky notes that should be sticky vertically. let me know if you can think of a better way of doing this like going back to the grid way of it

--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -1,30 +1,39 @@
 body {
 	background-color: black;
+}
 
+* {
+	box-sizing: border-box;
 }
 
 img {
 	height: 100%;
 }
 
-
 .grid {
-	margin: 200px;
-	writing-mode: vertical-lr;
-	display: grid;
-	grid-gap: 2vh;
-	grid-auto-rows: 131vh;
-	grid-template-columns: repeat(5, 80vh);
-	grid-auto-flow: row;
-	text-align: center;
+	//use scroll snapping?
+	margin: 1000px;
+	display: table;
 }
 
 .person {
+	position: relative;
 	overflow: hidden;
-	grid-row-end: auto;
-	width: 80vw;
-	height: 80vh;
+	width: 4200px;
+	height: 3000px;
+	padding: 300px;
+}
 
+.person:nth-child(odd) {
+	.journal {
+		left: 1700px;
+	}
+}
+
+.person:nth-child(even) {
+	.photograph {
+		left: 420px;
+	}
 
 }
 
@@ -36,6 +45,9 @@ img {
 .journal {
 	display: flex;
 	position: absolute;
+	width: 2000px;
+	height: 3000px;
+
 }
 
 .photograph-wrapper {
@@ -46,9 +58,43 @@ img {
 .photograph {
 	display: flex;
 	position: absolute;
-	bottom: 55px;
+	width: 3000px;
+	height: 2000px;
 	object-fit: cover;
 	z-index: 2;
 	transition: all .2s ease-in-out;
+}
 
+.ux-designer {
+	.tag {
+		background-image: url('../assets/UX.png');
+	}
+}
+
+.service-designer {
+	.tag {
+		background-image: url('../assets/SERV.png');
+	}
+}
+
+
+.tag {
+	cursor: pointer;
+	z-index: 3;
+	top: 130px;
+	right: 180px;
+	float: right;
+	display: flex;
+	position: absolute;
+	width: 100px;
+	height: 100px;
+	background-size: 100% auto;
+	background-repeat: no-repeat;
+	object-fit: cover;
+	-webkit-transition: -webkit-transform .8s ease-in-out;
+	transition: transform .3s ease-in-out;
+
+	&:hover {
+		transform: rotate(10deg);
+	}
 }
