--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -66,26 +66,50 @@ img {
 }
 
 .ux-designer {
-	.tag {
+	.maintag {
 		background-image: url('../assets/UX.png');
 	}
 }
 
 .service-designer {
-	.tag {
+	.maintag {
 		background-image: url('../assets/SERV.png');
 	}
 }
 
+.videographer {
+	.maintag {
+		background-image: url('../assets/VID.png');
+	}
+}
+
+//**subtags**
+.in-house {
+	.subtag {
+		background-image: url('../assets/inhouse.png');
+	}
+}
+
+.agency {
+	.subtag {
+		background-image: url('../assets/agency.png');
+	}
+}
+
+.freelance {
+	.subtag {
+		background-image: url('../assets/freelance.png');
+	}
+}
 
 .tag {
+	position: -webkit-sticky;
+	position: sticky;
+	z-index: 5;
 	cursor: pointer;
-	z-index: 3;
 	top: 130px;
-	right: 180px;
 	float: right;
 	display: flex;
-	position: absolute;
 	width: 600px;
 	height: 600px;
 	background-size: 100% auto;
@@ -97,4 +121,11 @@ img {
 	&:hover {
 		transform: rotate(10deg);
 	}
+}
+
+.subtag {
+	width: 400px;
+	height: 400px;
+	margin-right: -112px;
+	z-index: 4;
 }
