--- a/css/insightsSlider.css
+++ b/css/insightsSlider.css
@@ -65,6 +65,9 @@
       object-fit: cover;
       -webkit-transition: -webkit-transform .8s ease-in-out;
       transition: transform .3s ease-in-out; }
+    .item .subtag {
+      top: 230px;
+      right: 10px; }
   .item.nopointer {
     display: none; }
   .holder div {
@@ -78,6 +81,8 @@
   .container {
     position: relative;
     height: 100vh; }
+  webkit-scrollbar {
+    display: none; }
   #rotateBtn {
     display: none; }
   :root {
@@ -99,8 +104,6 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease; }
-    .insights-content .item-wrapper-left-scroll {
-      background-color: pink; }
     .insights-content .item-wrapper {
       list-style: none;
       display: grid;
