--- a/css/grid.css
+++ b/css/grid.css
@@ -8,21 +8,24 @@ img {
   height: 100%; }
 
 .grid {
-  margin: 1000px;
+  margin: 100px;
+  margin-left: 400px;
   display: table; }
+  .grid table {
+    margin-top: -300px; }
 
 .person {
   position: relative;
   overflow: hidden;
-  width: 4200px;
-  height: 3000px;
-  padding: 300px; }
+  width: 1000px;
+  height: 900px;
+  padding: 100px; }
 
-.person:nth-child(odd) .journal {
-  left: 1700px; }
+tr:nth-child(odd) .journal {
+  left: -38px; }
 
-.person:nth-child(even) .photograph {
-  left: 420px; }
+tr:nth-child(even) .journal {
+  left: 362px; }
 
 .journal-wrapper {
   position: relative;
@@ -31,8 +34,8 @@ img {
 .journal {
   display: flex;
   position: absolute;
-  width: 2000px;
-  height: 3000px; }
+  width: 440px;
+  height: 620px; }
 
 .photograph-wrapper {
   position: relative;
@@ -41,8 +44,8 @@ img {
 .photograph {
   display: flex;
   position: absolute;
-  width: 3000px;
-  height: 2000px;
+  width: 700px;
+  height: auto;
   object-fit: cover;
   z-index: 2;
   transition: all .2s ease-in-out; }
@@ -70,11 +73,11 @@ img {
   position: sticky;
   z-index: 5;
   cursor: pointer;
-  top: 130px;
+  top: 10px;
   float: right;
   display: flex;
-  width: 600px;
-  height: 600px;
+  width: 180px;
+  height: 180px;
   background-size: 100% auto;
   background-repeat: no-repeat;
   object-fit: cover;
@@ -84,7 +87,7 @@ img {
     transform: rotate(10deg); }
 
 .subtag {
-  width: 400px;
-  height: 400px;
-  margin-right: -112px;
+  width: 164px;
+  height: 170px;
+  margin-right: -12px;
   z-index: 4; }
