--- a/css/nav.css
+++ b/css/nav.css
@@ -25,8 +25,10 @@
       .navbar .nav .nav-link:focus {
         text-decoration: underline;
         background-color: unset; }
-    .navbar .nav .nav-item .arrow {
-      display: none; }
+    .navbar .nav .nav-item {
+      color: white; }
+      .navbar .nav .nav-item .arrow {
+        display: none; }
     .navbar .nav .hover {
       transition: all 1s ease-in-out; }
       .navbar .nav .hover .arrow {
@@ -67,3 +69,10 @@
 @media only screen and (max-width: 768px) {
   .logo {
     display: none; } }
+
+.arrow {
+  background: url("../assets/icons/arrow.svg") no-repeat no-repeat center;
+  width: 22px;
+  height: 11px;
+  background-size: cover;
+  margin-right: 7px; }
