--- a/css/grid.css
+++ b/css/grid.css
@@ -69,6 +69,9 @@ tr:nth-child(even) .journal {
   .tag:hover {
     transform: rotate(10deg); }
 
+tr {
+  scroll-snap-type: y mandatory; }
+
 .subtag {
   width: 164px;
   height: 170px;
