--- a/css/grid.css
+++ b/css/grid.css
@@ -93,3 +93,29 @@ tr:nth-child(even) .journal {
 
 .freelance .subtag {
   background-image: url("../assets/freelance.png"); }
+
+.left-shadow {
+  height: 100vh;
+  width: 20%;
+  background: black;
+  background: -webkit-linear-gradient(left, black 0%, rgba(255, 255, 255, 0) 100%);
+  background: -o-linear-gradient(left, black 0%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(to right, black 0%, rgba(255, 255, 255, 0) 100%);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 10000;
+  pointer-events: none; }
+
+.right-shadow {
+  height: 100vh;
+  width: 20%;
+  background: white;
+  background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, black 100%);
+  background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, black 100%);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, black 100%);
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  z-index: 10000;
+  pointer-events: none; }
