--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -15,8 +15,21 @@ img {
 	z-index: 15;
 }
 
+.insights.active {
+	float: left;
+	text-decoration: none !important;
+}
+
+.nav-item {
+	width: max-content;
+
+}
+
 .grid-breadcrumb {
 	display: inline-block;
+	float: left;
+	padding: 10px 0px;
+	text-decoration: underline;
 
 	.arrow {
 		display: inline-block !important;
