--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -262,6 +262,7 @@ $width: 768px;
 	}
 
 	.sticky-note {
+		cursor: pointer;
 		position: absolute;
 		top: 100px;
 		right: 50px;
@@ -270,9 +271,16 @@ $width: 768px;
 		background-size: 100% auto;
 		background-repeat: no-repeat;
 		object-fit: cover;
+		-webkit-transition: -webkit-transform .8s ease-in-out;
+		transition: transform .3s ease-in-out;
+
+		&:hover {
+			transform: rotate(10deg);
+		}
 	}
 
 	.sub-sticky-note {
+		cursor: pointer;
 		position: absolute;
 		top: 180px;
 		right: 50px;
@@ -281,6 +289,12 @@ $width: 768px;
 		background-size: 100% auto;
 		background-repeat: no-repeat;
 		object-fit: cover;
+		-webkit-transition: -webkit-transform .8s ease-in-out;
+		transition: transform .3s ease-in-out;
+
+		&:hover {
+			transform: rotate(10deg);
+		}
 	}
 }
 
