--- a/scss/insightsSlider.scss
+++ b/scss/insightsSlider.scss
@@ -3,20 +3,7 @@ $width: 768px;
 
 @media only screen and (max-width: $width) {
 	#rotateBtn {
-		display: none;
-		position: absolute;
 		top: 103px;
-		right: 24px;
-		text-align: right;
-		color: inherit;
-		border: none;
-		padding: 0;
-		outline: inherit;
-		font-size: 30px;
-
-		background: url("../assets/icons/rotate.png") no-repeat no-repeat center;
-		width: 33px;
-		height: 34px;
 	}
 
 	.insights-content {
@@ -54,6 +41,7 @@ $width: 768px;
 				max-height: 600px;
 				object-fit: cover;
 				margin-bottom: 100px;
+				top: 40px;
 			}
 		}
 
@@ -110,6 +98,7 @@ $width: 768px;
 		z-index: 1;
 		/*only this DIV will be visible*/
 	}
+
 }
 
 
@@ -125,10 +114,6 @@ $width: 768px;
 		display: none;
 	}
 
-	#rotateBtn {
-		display: none;
-	}
-
 	:root {
 		--gutter: 1px;
 	}
@@ -140,13 +125,6 @@ $width: 768px;
 	.insights-content>.full {
 		grid-column: 1 / -1;
 	}
-
-	// .insights-function {
-	// 	@if offsetleft
-	// }
-
-
-
 
 	.insights-content {
 		display: none;
@@ -169,17 +147,14 @@ $width: 768px;
 			display: grid;
 			grid-gap: calc(var(--gutter) / 2);
 			grid-template-columns: repeat(10, calc(35% - var(--gutter) * 2));
-			grid-auto-rows: minmax(440px, 1fr);
+			grid-auto-rows: minmax(480px, 1fr);
 			overflow-x: scroll;
 			overflow-y: hidden;
 			scroll-snap-type: x proximity;
 			padding-bottom: calc(.75 * var(--gutter));
 			margin-bottom: calc(-.25 * var(--gutter));
 			// scroll-padding-left: 100px;
-
-
 		}
-
 	}
 
 	.scroller-margin {
@@ -191,8 +166,6 @@ $width: 768px;
 	}
 
 	.item {
-		// margin: 0;
-		// margin-left: 500px;
 		padding: 0;
 		top: 40px;
 		position: relative;
@@ -212,6 +185,7 @@ $width: 768px;
 				background-size: 100% auto;
 				background-repeat: no-repeat;
 				object-fit: cover;
+				top: 40px;
 			}
 		}
 
@@ -261,6 +235,16 @@ $width: 768px;
 		}
 	}
 
+	.holder div {
+		z-index: 1;
+		/*init z-index*/
+	}
+
+	.holder div.current {
+		z-index: 2;
+		/*only this DIV will be visible*/
+	}
+
 	.sticky-note {
 		cursor: pointer;
 		position: absolute;
@@ -296,6 +280,23 @@ $width: 768px;
 			transform: rotate(10deg);
 		}
 	}
+}
+
+#rotateBtn {
+	display: none;
+	position: absolute;
+	right: 24px;
+	text-align: right;
+	color: inherit;
+	border: none;
+	padding: 0;
+	outline: inherit;
+	font-size: 30px;
+	background: url("../assets/icons/rotate.png") no-repeat no-repeat center;
+	width: 33px;
+	height: 34px;
+	top: 80px;
+
 }
 
 .subtag {
@@ -393,5 +394,9 @@ li.freelance {
 }
 
 .filtered {
-	top: 0px;
+	top: 0px !important;
+
+	.journal {
+		top: 0px !important;
+	}
 }
