--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -78,12 +78,10 @@ tr:nth-child(even) {
 	.journal {
 		left: 362px;
 	}
-
 }
 
 .journal-wrapper {
 	position: relative;
-	z-index: 3;
 }
 
 .journal {
@@ -96,7 +94,14 @@ tr:nth-child(even) {
 
 .photograph-wrapper {
 	position: relative;
+}
+
+.person div {
 	z-index: 1;
+}
+
+.person .current {
+	z-index: 3;
 }
 
 .photograph {
@@ -208,4 +213,21 @@ tr {
 	right: 0px;
 	z-index: 10;
 	pointer-events: none;
+}
+
+#rotateBtn {
+	position: fixed;
+	z-index: 15;
+	bottom: 30px;
+	right: 30px;
+	text-align: right;
+	color: inherit;
+	border: none;
+	padding: 0;
+	outline: inherit;
+	font-size: 30px;
+	background: url("../assets/icons/rotate.png") no-repeat no-repeat center;
+	width: 33px;
+	height: 34px;
+
 }
