--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -209,10 +209,15 @@ tr {
 	z-index: 10;
 	pointer-events: none;
 }
+.column-wrapper{
+	position: relative;
+	// background-color: yellow;
+
+}
 
 .share-link{
-	position: fixed;
-	right: 310px;
+	position: absolute;
+	right: 200px;
 	top: 350px;
 	// right: 23%;
 	// top: 60%;
@@ -227,9 +232,9 @@ tr {
 	background-color: white;
 	color: black;
 	// right: -180px;
-	right: 200px;
+	right: 90px;
 	top: 380px;
-	position: fixed;
+	position: absolute;
 	// right: 20%;
 	// top: 65%;
 	padding: 10px;
